[OPENY-247] Fix Header in Rose overlaps admin menu

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -806,6 +806,7 @@ body {
 .toolbar-fixed.toolbar-horizontal.toolbar-tray-open .viewport,
 .toolbar-fixed.toolbar-horizontal.toolbar-tray-open .top-navs {
   margin-top: 79px;
+  z-index: 10;
 }
 .toolbar-fixed.toolbar-vertical .viewport,
 .toolbar-fixed.toolbar-vertical .top-navs {
